@@ -400,7 +400,7 @@ lemma input_enabled_par:
       ==> input_enabled (A||B)"
 apply (unfold input_enabled_def)
 apply (simp add: Let_def inputs_of_par trans_of_par)
-apply (tactic "safe_tac (Proof_Context.init_global @{theory Fun})")
+apply (tactic "safe_tac @{theory_context Fun}")
 apply (simp add: inp_is_act)
 prefer 2
 apply (simp add: inp_is_act)
