@@ -298,7 +298,7 @@ fun mkex_induct_tac ctxt sch exA exB =
   let val ss = simpset_of ctxt in
     EVERY'[Seq_induct_tac ctxt sch defs,
            asm_full_simp_tac ss,
-           SELECT_GOAL (safe_tac (Proof_Context.init_global @{theory Fun})),
+           SELECT_GOAL (safe_tac @{theory_context Fun}),
            Seq_case_simp_tac ctxt exA,
            Seq_case_simp_tac ctxt exB,
            asm_full_simp_tac ss,
